client-manager/client-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-manager
spec:
  selector:
    matchLabels:
      app: client-manager
  template:
    metadata:
      labels:
        app: client-manager
    spec:
      containers:
      - name: client-manager
        image: makingthehand/client-manager
        ports:
        - containerPort: 3000
