client-manager/konga-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
spec:
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1337
          protocol: TCP
