client-manager/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongodb-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
        #environment: test
        #replicaset: MainRepSet
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
    #spec:
    #  terminationGracePeriodSeconds: 10
    #  containers:
    #    - name: mongod-container
    #      image: mongo
    #      command:
    #        - "mongod"
    #        - "--bind_ip"
    #        - "0.0.0.0"
    #        - "--replSet"
    #        - "MainRepSet"
    #      resources:
    #        requests:
    #          cpu: "0.2"
    #          memory: 200Mi
    #      ports:
    #        - containerPort: 27017
