client-manager/client-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-manager-service
spec:
  selector:
    app: client-manager
  ports:
  - port: 3000
    targetPort: 3000
