client-manager/konga-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konga-service
spec:
  selector:
    app: konga
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1337
