client-manager/kong-ingress-routes-client-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-manager
  namespace: default
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
        - path: "/clients"
          pathType: Prefix
          backend:
            service:
              name: client-manager-service
              port:
                number: 3000
