client-manager/kong-route-kong-admin.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: kong-admin
spec:
  rules:
  - host: kongadmin.mydomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kong-admin
            port: 
              number: 443
  tls:
    - hosts:
      - kongadmin.mydomain.com
      secretName: kong-mydomain.com-tls
